# fibbot

./: Cargo.toml  Dockerfile  README.md  action.yml  entrypoint.sh
.github/workflows/: log.yml
src/: extract_num.rs  fibonacci.rs  get_pr.rs  main  main.rs  number.rs  post_comment.rs  post_comments.rs
