[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]
github-actions = "0.0.3"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
regex= "1.5"

[[bin]]
name = "myapp"
path = "src/main.rs"
